--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,10 +1,15 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
+    line-height: normal;
+}
+ul{
+    line-height: 1.5;
 }
 @media (max-width: 991px) {
     /*-----------------------------------cv part--------------------------------------*/
     #main_content_box{
         display: flex;
+        font-size: 1.7vw;
     }
     #left_main_content{
         width: 0%;
@@ -44,6 +49,24 @@ body{
         left: 70%;
         width: 27.5%;
         height: 95%;
+        text-align: right;
+        padding: 1% 1% 1% 0%;
+        font-size: 1.8vw;
+    }
+    #my_infos p{
+        margin-bottom: 5%;
+    }
+    #my_infos h2{
+        color: rgb(142, 170, 219);
+        font-size: 1.8vw;
+        font-weight: bold;
+        margin-top: 6%;
+    }
+    #my_infos h3{
+        font-weight: bolder;
+        font-size: 3vw;
+        margin-bottom: 10%;
+        margin-top: 80%;
     }
     #left_cv_part{
         position: absolute;
@@ -54,27 +77,40 @@ body{
         height: 75%;
     }
     #dates{
-        border: 1px solid green;
         width: 20%;
         height: 100%;
+        position: relative;
+    }
+    #dates p{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%)
     }
     #text_content{
-        border: 1px solid rgb(255, 187, 0);
+        /* border: 1px solid rgb(255, 187, 0); */
         width: 80%;
         height: 100%;
     }
-    #interests{
-        border: 1px solid pink;
-        position: absolute;
-        top: 86%;
-        left: 5%;
-        width: 65%;
-        height: 12%;
+    #text_content h2{
+        color: rgb(142, 170, 219);
+        font-weight: bold;
+        font-size: 2.3vw;
+        margin-bottom: 2%;
+        margin-top: 3%;
+    }
+    #text_content ul{
+        margin-bottom: 3%;
+        padding-left: 2%;
+        list-style-type: "- ";
+    }
+    #text_content p{
+        margin-bottom: 3%;
     }
 }
 @media (min-width: 992px){
     /*-----------------------------------cv part--------------------------------------*/
     #main_content_box{
+        font-size: 1.2vw;
         display: flex;
     }
     #left_main_content{
@@ -116,6 +152,24 @@ body{
         left: 70%;
         width: 27.5%;
         height: 95%;
+        text-align: right;
+        padding: 1% 1% 1% 0%;
+        font-size: 1.2vw;;
+    }
+    #my_infos p{
+        margin-bottom: 5%;
+    }
+    #my_infos h2{
+        color: rgb(142, 170, 219);
+        font-size: 1.3vw;
+        font-weight: bold;
+        margin-top: 8%;
+    }
+    #my_infos h3{
+        font-weight: bolder;
+        font-size: 2vw;
+        margin-bottom: 10%;
+        margin-top: 130%;
     }
     #left_cv_part{
         position: absolute;
@@ -126,24 +180,34 @@ body{
         height: 75%;
     }
     #dates{
-        border: 1px solid green;
         width: 20%;
         height: 100%;
+        position: relative;
+    }
+    #dates p{
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%)
     }
     #text_content{
-        border: 1px solid rgb(255, 187, 0);
+        /* border: 1px solid rgb(255, 187, 0); */
         width: 80%;
         height: 100%;
+        padding-right: 2%;
     }
-    #interests{
-        border: 1px solid pink;
-        position: absolute;
-        top: 86%;
-        left: 5%;
-        width: 65%;
-        height: 12%;
+    #text_content h2{
+        color: rgb(142, 170, 219);
+        font-weight: bold;
+        font-size: 2.3vw;
+        margin-bottom: 2%;
+        margin-top: 5%;
+    }
+    #text_content ul{
+        margin-bottom: 3%;
+        padding-left: 3%;
+        list-style-type: "- ";
+    }
+    #text_content p{
+        margin-bottom: 3%;
     }
 }
-
-/*----------------------------------out of @media-------------------------------------*/
-
