--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,13 +2,25 @@ body{
     font-family: Arial, Helvetica, sans-serif;
     line-height: normal;
 }
+a:hover{
+    text-decoration: none;
+    opacity: 0.5;
+}
 #jsAnimation{
+    font-family: Orange_juice;
     position: relative;
     width: 100%;
     background-image: url(../img/kb2.png);
     background-repeat: no-repeat;
     background-size: cover;
     overflow: hidden;
+}
+#web a, #drawings a, #others a{
+    color: black;
+}
+@font-face {
+    font-family: "Orange_juice";
+    src: url('../fonts/OrangeJuice-X2z9.ttf'); 
 }
 /*---------------------------------css for little screens------------------------------*/
 /*=====================================================================================*/
@@ -20,6 +32,66 @@ body{
     .navbar-brand{
         margin-right: 0px;
     }
+    /*---------------------------------OTHER PARTS-------------------------------------*/
+    #web{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: 2%;
+        height: 48%;
+        background-color: rgba(255, 192, 203, 0.5);
+        transition: left 1s ease-in-out 1s;
+        -webkit-transition: left 1s ease-in-out 1s;
+    }
+    #drawings{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: 52%;
+        height: 22%;
+        width: 96%;
+        background-color: rgba(23, 184, 176, 0.5);
+        transition: left 1s ease-in-out 1.2s;
+        -webkit-transition: left 1s ease-in-out 1.2s;
+    }
+    #others{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: 76%;
+        height: 22%;
+        width: 96%;
+        background-color: rgba(148, 247, 109, 0.5);
+        transition: left 1s ease-in-out 1.4s;
+        -webkit-transition: left 1s ease-in-out 1.4s;
+    }
+    #webText{
+        font-size: 200%;
+        text-align: center;
+        transform: translateY(50%);
+    }
+    #drawingsText{
+        height: 75%;
+        font-size: 200%;
+        text-align: center;
+        transform: translateY(50%);
+    }
+    #othersText{
+        height: 75%;
+        font-size: 200%;
+        text-align: center;
+        transform: translateY(50%);
+    }
+    .webPlaced{
+        left: 2% !important;
+    }
+    .drawingsPlaced{
+        left: 2% !important;
+    }
+    .othersPlaced{
+        left: 2% !important;
+    }
+    /*---------------------------------avatar------------------------------------------*/
     #avatarDiv{
         position: absolute;
             /* opacity: 0.5; */
@@ -61,19 +133,6 @@ body{
         transition-delay: 1s;
         -webkit-transition-delay: 1s;
     }
-    /*.avatarDivBig{
-        height: 50vh; to comment after
-        transition: all 1s cubic-bezier(.68,-0.55,.27,1.55);
-        -webkit-transition: all 1s cubic-bezier(.98,-0.55,.01,1.55);
-    }
-    .avatarPart{
-        position: absolute;
-        right: 1vw;
-        /* transform: translate(-50%); to comment after
-        max-height: 100%;
-        top: 3vh;
-        max-width: 35%;
-    }*/
     /*-----------------------------------cv part--------------------------------------*/
     #main_content_box{
         display: flex;
@@ -183,9 +242,10 @@ body{
 /*=====================================================================================*/
 @media (min-width: 992px){
     /*-----------------------------------home part-------------------------------------*/
+                /*-----------------------Avatar part----------------------*/
     #avatarDiv{
         position: absolute;
-            /* opacity: 0.5; */
+        z-index: auto;
         width: 100%;
         max-height: 100%;
     }
@@ -223,6 +283,58 @@ body{
     .nosePlaced{
         transition-delay: 0.8s;
         -webkit-transition-delay: 0.8s;
+    }
+                /*-----------------------Other parts----------------------*/    
+    #web{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: 2vh;
+        height: 30%;
+        background-color: rgba(255, 192, 203, 0.5);
+        transition: left 1s ease-in-out 1s;
+        -webkit-transition: left 1s ease-in-out 1s;
+    }
+        #webText{
+            height: 75%;
+            font-size: 500%;
+            text-align: center;
+            transform: translateY(50%);
+        }
+        #drawingsText{
+            height: 75%;
+            font-size: 500%;
+            text-align: center;
+            transform: translateY(50%);
+        }
+        #othersText{
+            height: 75%;
+            font-size: 500%;
+            text-align: center;
+            transform: translateY(50%);
+        }
+    #drawings{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: calc(30% + 4vh);
+        height: 30%;
+        background-color: rgba(23, 184, 176, 0.5);
+        transition: left 1s ease-in-out 1.2s;
+        -webkit-transition: left 1s ease-in-out 1.2s;
+    }
+    #others{
+        position: absolute;
+        z-index: 1;
+        left: -100%;
+        top: calc(60% + 6vh);
+        height: 30%;
+        background-color: rgba(148, 247, 109, 0.5);
+        transition: left 1s ease-in-out 1.4s;
+        -webkit-transition: left 1s ease-in-out 1.4s;
+    }
+    .webPlaced,.drawingsPlaced,.othersPlaced{
+        left: 2vw !important;
     }
     /*-----------------------------------cv part---------------------------------------*/
     #main_content_box{
@@ -309,7 +421,6 @@ body{
         transform: translateX(-50%)
     }
     #text_content{
-        /* border: 1px solid rgb(255, 187, 0); */
         width: 80%;
         height: 100%;
         padding-right: 2%;
